# scriptGK

./: README.md  main.py  pyproject.toml
src/: main.py  utils.py
